recruitmentList 공고 리스트 불러오기 작성중..

--- a/Albanara/WebContent/recruitment.html
+++ b/Albanara/WebContent/recruitment.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 <meta charset="EUC-KR">
+
+<script type="text/javascript">
+	location.href="Recruitment/recruitmentList.do"
+</script>
+
+
 <title>Insert title here</title>
 </head>
 <body>
-	<h3>진행중인 공고목록</h3>
+
 </body>
 </html>
