준상 위도경도 뽑아내기요~

--- a/Albanara/WebContent/kakaoMap.html
+++ b/Albanara/WebContent/kakaoMap.html
@@ -6,9 +6,9 @@
 
 </head>
 <body>
-<form action ="mapView.jsp">
-	주소<input type ="text" name ="location">
-	전송<input type ="submit" >
+<form action = "mapView.jsp">
+	주소<input type ="text" name ="location" value="" id ="addr">
+	<input type ="submit" value ="전송" onclick ="Click()">
 </form>
 </body>
 </html>
