공고목록 기본 틀 완료

--- a/Albanara/WebContent/recruitment.html
+++ b/Albanara/WebContent/recruitment.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 
 <script type="text/javascript">
-	location.href="Recruitment/recruitmentList.do"
+	location.href="recruitment/recruitmentList.do"
 </script>
 
 
 <title>Insert title here</title>
 </head>
+
 <body>
+
 
 </body>
 </html>
