--- a/Albanara/WebContent/HyunNewFile.html
+++ b/Albanara/WebContent/HyunNewFile.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<title>Kakao 지도 시작하기 </title>
 	<script type="text/javascript">
-		location.href="Recruitment/hyunMapAction.do";
+		location.href="Main/hyunMapAction.do";
 	</script>
 </head>
 <body>
