--- a/Albanara/WebContent/nav.html
+++ b/Albanara/WebContent/nav.html
@@ -1,7 +1,7 @@
 <div class="nav">
     <ul class="nav_bar">
         <a href="/Albanara/recruitment/recruitmentList.do"><li>공고정보</li></a>
-        <a href="#"><li>인재정보</li></a>
+        <a href="/Albanara/recruitment/totalRecruitmentList.do"><li>인재정보</li></a>
         <a href="/Albanara/member/showEmployee.do?seq=1"><li>개인서비스</li></a>
         <a href="/Albanara/member/detailEmployers.do?seq=1"><li>기업서비스</li></a>
     </ul>
