header.html이랑 showEmployee.jsp 차트 크기 수정?

--- a/Albanara/WebContent/header.html
+++ b/Albanara/WebContent/header.html
@@ -8,7 +8,7 @@
         </ul>
     </div>
     <div class="header_main">
-        <a href="#"><img src="/Albanara/images/common/logo.png"></a>
+        <a href="/Albanara/main/mainAction.do"><img src="/Albanara/images/common/logo.png"></a>
         <div class="header_search">
             <form id="searchBox">
                 <input type="text" name="search" placeholder="검색어">
